cabal-version:      2.4
name:               nbt2
version:            0.1.0.0

synopsis: NBT (named binary tag) serialization and deserialization.
description: This project was created because the old nbt package has had a 1-liner open issue preventing compilation for 2 years now at the time of writing, despite submitting a pull request to fix it.
    While I was at it, I went ahead and changed the data structure to use konsumlamm's rrb-vector package instead of lists or unboxed arrays for more well-rounded asymptotics.
    StrictData is also turned on, and some functions are exported for reading/writing NBT files that remove some of the old boilerplate code.
homepage:    https://github.com/davidgarland/nbt2
bug-reports: https://github.com/davidgarland/nbt2
license-file: LICENSE
license: MIT
author: David Garland
maintainer: davidrgarland@me.com
category: Data

extra-source-files: CHANGELOG.md

library
    exposed-modules: Data.Nbt
    ghc-options: -Wall
    default-extensions: ImportQualifiedPost
                      , LambdaCase
                      , StrictData
    build-depends: base ^>=4.16.2.0
                 , bytestring >= 0.11.3.1
                 , cereal >= 0.5.8.2
                 , rrb-vector >= 0.1.1.0
                 , text >= 1.2.5.0
                 , zlib >= 0.6.3.0
    hs-source-dirs:   src
    default-language: Haskell2010
